tests/dataset/tpc-ds/compiler/pl/q2.error
run: exit status 2
[]
ERROR: /tmp/q2.pl:58: user:main Unknown message: error('expect failed')
